objects/ChatCountryLanguageMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Chat_Button_Id__c</fullName>
        <label>Chat Button Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ChatCountryLanguageMapping</label>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Skill__c</columns>
        <columns>Chat_Button_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Chat Mappings</pluralLabel>
</CustomObject>